--- a/src/app/web/nosotros/nosotros.component.html
+++ b/src/app/web/nosotros/nosotros.component.html
@@ -1,3 +1,39 @@
-<p>
-  nosotros works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="banner">
+      <img src="assets/img/nosotros.jpg" alt="img">
+      <div class="heading">
+        <h1>Nosotros</h1>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 titulo">
+      <p>somos una <strong>grand familia</strong></p>
+    </div>
+    <br><br>
+    <br><br>
+    <div class="col-lg-offset-2 col-md-offset-2 col-lg-4 col-md-4 col-xs-12 col-sm-12">
+      <span class="gente"> 
+        <mat-icon>people</mat-icon>
+        PATRONATO ESCOLAR
+      </span>
+      <p>
+          Es el máximo estamento del Colegio, que cuenta con miembros que eligen a una directiva 
+          de 6 representantes. De izquierda a derecha:
+      </p>
+      <br><br>
+      <p>Sr. Tomamas</p>
+      <p>Sra. Tomasa</p>
+      <p>Sr. Tomamenos</p>
+      <p>Sr. Sivoy Tomas</p>
+      <p>Sra. Sitomas vino</p>
+    </div>
+    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12">
+      <img src="assets/img/personas.jpg" alt="personas">
+    </div>
+  </div>
+</div>
