--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footer">
   <div class="container">
     <div class="row">
-      <div class="col-lg-3 col-md-3 col-xs-3">
+      <div class="col-lg-3 col-md-6 col-xs-12 col-sm-12">
           <div class="contactanos">
               <h3>CONTACTANOS</h3>
               <p>
@@ -20,7 +20,7 @@
         
       </div>
 
-      <div class="col-lg-3 col-md-3 col-xs-3">
+      <div class="col-lg-3 col-md-6 col-xs-12 col-sm-12">
           <div class="links">
               <h3>PAGINAS DE INTERES</h3>
               <p>
@@ -35,11 +35,11 @@
               </div>
       </div>
 
-      <div class="col-lg-2 col-md-2 col-xs-2">
+      <div class="col-lg-2 col-md-2 col-xs-12 col-sm-12">
         
       </div>
 
-      <div class="col-lg-4 col-md-4 col-xs-4">
+      <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12">
         <img src="assets/img/logo-footer.png" class="logo-footer "alt="">
         <p>Colegio machencio en Movimiento</p>  
       </div>
@@ -48,7 +48,7 @@
 
   <div class="container-fluid desarrollado">
     <div class="row">
-      <div class="col-lg-offset-3 col-md-offset-3 col-lg-6 col-md-6 col-xs-12">
+      <div class="col-lg-offset-3 col-md-offset-3 col-lg-6 col-md-6 col-xs-12 col-sm-12">
         
         <p class="center">Irvins school &copy 2018 | Desarrollado por: <strong>Amicasoft</strong></p>
    
