Login terminado y creando las paginas para el dashboard junto con tus rutas a parte

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,9 +35,9 @@
                   </form>
 
             </mat-card-content>
-            <button (click)="ingresar()" mat-raised-button color="primary">
+            <!-- <button (click)="ingresar()" mat-raised-button color="primary">
                 Login
-              </button>
+              </button> -->
           </mat-card>
 
         </div>
