--- a/src/app/pages/pages.component.css
+++ b/src/app/pages/pages.component.css
@@ -1,48 +1,45 @@
-/* .example-container {
-    width: 500px;
-    height: 300px;
-    border: 1px solid rgba(0, 0, 0, 0.5);
-  }
-  
-  .example-sidenav-content {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .example-sidenav {
-    padding: 20px;
-  } */
+.example-container {
+  position: absolute;
+  top: 60px;
+  bottom: 60px;
+  left: 0;
+  right: 0;
+}
 
-  .example-container {
-    position: absolute;
-    top: 60px;
-    bottom: 60px;
-    left: 0;
-    right: 0;
-  }
-  
-  .example-sidenav {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 200px;
-    background: rgba(255, 0, 0, 0.5);
-  }
-  
-  .example-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-  }
-  
-  .example-footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: #fd5e;
-  }
+.example-sidenav {
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  width: 200px;
+  background: rgba(255, 0, 0, 0.5);
+}
+.mat-accordion{
+  background: rgba(255, 0, 0, 0.5);
+}
+.example-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.mat-expansion-panel-header{
+  background: rgba(255, 0, 0, 0.5);
+}
+
+.mat-expansion-panel :hover{
+  background: rgba(255, 0, 0, 0.5);
+
+}
+.mat-expansion-panel-body{
+  padding: 0px 0px 0px 0px;
+  background: rgba(255, 0, 0, 0.5);
+}
+.example-footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #fd5e;
+}
   
