--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -9,13 +9,57 @@
      fixedTopGap="0"
     fixedBottomGap="0"
     class="example-sidenav">
-      
+    <mat-nav-list>
+            <a mat-list-item routerLink="registrar">Registrar usuario</a>
+            <a mat-list-item routerLink="dashboard">Dashboard</a>
+            
+
+            <mat-accordion mat-list-item>
+                    <mat-expansion-panel>
+                      <mat-expansion-panel-header>
+                        <mat-panel-title>
+                          Personal data
+                        </mat-panel-title>
+                      </mat-expansion-panel-header>
+                      <mat-list>
+                            <mat-list-item>
+                                    <a routerLink="registrar">Profesores</a>
+                            </mat-list-item>
+                            <mat-divider></mat-divider>
+                            <mat-list-item>
+                                <a routerLink="dashboard">Alumnos</a>
+                            </mat-list-item>
+                            <mat-divider></mat-divider>
+                            <mat-list-item>
+                                <a routerLink="registrar">Colegio</a>
+                            </mat-list-item>
+                          
+                      
+                  
+                    </mat-list>
+                    </mat-expansion-panel>
+                    <mat-expansion-panel (opened)="panelOpenState = true"
+                                         (closed)="panelOpenState = false">
+                      <mat-expansion-panel-header>
+                        <mat-panel-title>
+                          Segundo
+                        </mat-panel-title>
+                        
+                      </mat-expansion-panel-header>
+                      <p>Correo</p>
+                    </mat-expansion-panel>
+                  </mat-accordion>
+
+                  <a mat-list-item (click)="this.usuarioService.logOut()">
+                        <mat-icon>power_settings_new</mat-icon>
+                        Logout
+                    </a>
+
+    </mat-nav-list>
     </mat-sidenav>
 
-    <mat-sidenav-content>
-      
-      <div>hola colin de mrd</div>
 
+    <mat-sidenav-content>
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
