--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -13,6 +13,7 @@
       <a mat-list-item routerLink="dashboard">Dashboard</a>
       <a mat-list-item routerLink="profesores">Profesores</a>
       <a mat-list-item routerLink="alumnos">Alumnos</a>
+      <a mat-list-item routerLink="materias">Materias</a>
 
       <mat-accordion mat-list-item>
         <mat-expansion-panel>
@@ -23,15 +24,22 @@
           </mat-expansion-panel-header>
           <mat-list>
             <mat-list-item>
-              <a routerLink="clase/18-1">Primero</a>
+              <a routerLink="primero/18-1">Primero</a>
             </mat-list-item>
-            <mat-divider></mat-divider>
             <mat-list-item>
-              <a routerLink="clase/18-2">Segundo</a>
+              <a routerLink="segundo/18-2">Segundo</a>
             </mat-list-item>
-            <mat-divider></mat-divider>
             <mat-list-item>
-              <a routerLink="clase/18-3">Tercero</a>
+              <a routerLink="tercero/18-3">Tercero</a>
+            </mat-list-item>
+            <mat-list-item>
+              <a routerLink="cuarto/18-4">Cuarto</a>
+            </mat-list-item>
+            <mat-list-item>
+              <a routerLink="quinto/18-5">Quinto</a>
+            </mat-list-item>
+            <mat-list-item>
+              <a routerLink="sexto/18-6">Sexto</a>
             </mat-list-item>
 
 
@@ -46,7 +54,7 @@
           </mat-expansion-panel-header>
           <mat-list>
             <mat-list-item>
-              <a routerLink="clase/18-1">Primero</a>
+              <a routerLink="notas">Notas de todos</a>
             </mat-list-item>
             <!-- <mat-divider></mat-divider> -->
             <mat-list-item>
