Cambiando el login y poniendo guards para las rutas

--- a/src/app/pages/profesores/profesores.component.html
+++ b/src/app/pages/profesores/profesores.component.html
@@ -1,4 +1,15 @@
 <h3>Mantenimiento de los profesores</h3>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+      <mat-card>
+        <mat-form-field class="example-full-width">
+          <input matInput placeholder="Buscar profesor....">
+        </mat-form-field>
+      </mat-card> 
+    </div>
+  </div>
+</div>
 
 <div class="container-fluid">
   <div class="row">
