--- a/src/app/pages/materias/materias.component.html
+++ b/src/app/pages/materias/materias.component.html
@@ -1,5 +1,15 @@
 <h3>Mantenimiento de las materias enseñadas</h3>
-
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <mat-card>
+          <mat-form-field class="example-full-width">
+            <input #input (keyup)="buscarMaterias(input.value)" matInput placeholder="Buscar materias....">
+          </mat-form-field>
+        </mat-card>
+      </div>
+    </div>
+  </div>
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-12 col-sm-12 col-xs-12 col-md-12">
