--- a/src/app/pages/profesores/profesores.component.html
+++ b/src/app/pages/profesores/profesores.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-12">
       <mat-card>
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Buscar profesor....">
+          <input  #input (keyup)="buscarProfesores(input.value)" matInput placeholder="Buscar profesor....">
         </mat-form-field>
       </mat-card> 
     </div>
