--- a/src/app/pages/clases/cuarto/cuarto.component.html
+++ b/src/app/pages/clases/cuarto/cuarto.component.html
@@ -24,7 +24,7 @@
                   <th>DNI</th>
                   <th>direccion</th>
                   <th>telefono</th>
-                  <th></th>
+                  <th>Profesor</th>
                 </tr>
               </thead>
               <tbody>
