--- a/src/app/pages/materias/materias.component.html
+++ b/src/app/pages/materias/materias.component.html
@@ -31,7 +31,7 @@
                   
                   <th>Nombre</th>
                   
-                  <th></th>
+                  <th>Opciones</th>
                 </tr>
               </thead>
               <tbody>
@@ -39,7 +39,10 @@
             
                   <td>{{materia.nombre}}</td>
                  
-                  <td>opciones</td>
+                  <td>
+                      <td><button mat-raised-button color="primary"><mat-icon>save</mat-icon></button>
+                      <button (click)="borrarProfesor(profesor)" mat-raised-button color="warn"><mat-icon>delete</mat-icon></button>
+                  </td>
                 </tr>
               </tbody>
             </table>
