--- a/src/app/pages/profesores/profesor.component.html
+++ b/src/app/pages/profesores/profesor.component.html
@@ -1,3 +1,101 @@
-<p>
-  profesor works!
-</p>
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+            <div class="row">
+              <div class="col-lg-offset-3 col-md-offset-3 col-lg-5 col-md-5 col-xs-12 col-sm-12">
+                <div class="wrapper">
+  
+                  <div class="wrapper-header">
+                    <!-- <img src="assets/img/registrar-logo.jpg" alt="registrar-logo"> -->
+                    <div class="header-text">
+                      <h3>Registrarse un Profesor</h3>
+                      <p>Registrar las personas de la empresa</p>
+                    </div>
+                  </div>
+                  <div class="formulario">
+  
+                    <form [formGroup]="forma" (ngSubmit)="guardarProfesor()" action="">
+                      <p>
+                        <mat-icon>account_box</mat-icon>
+                        <mat-form-field>
+                          <input matInput placeholder="Escriba el nombre" formControlName="nombre" required>
+                          <mat-error *ngIf="forma.controls['nombre'].invalid">{{getErrorNameMessage()}}</mat-error>
+                        </mat-form-field>
+                      </p>
+                      <p>
+                        <mat-icon>account_box</mat-icon>
+                        <mat-form-field>
+                          <input matInput placeholder="Apellido Paterno" formControlName="apellido_paterno" required>
+                          <mat-error *ngIf="forma.controls['apellido_paterno'].invalid">{{getErrorApellidoPaMessage()}}</mat-error>
+                        </mat-form-field>
+                      </p>
+                      <p>
+                          <mat-icon>account_box</mat-icon>
+                          <mat-form-field>
+                            <input matInput placeholder="Apellido Materno" formControlName="apellido_materno" required>
+                            <mat-error *ngIf="forma.controls['apellido_materno'].invalid">{{getErrorApellidoMaMessage()}}</mat-error>
+                          </mat-form-field>
+                      </p>
+                      <p>
+                          <mat-icon>account_box</mat-icon>
+                          <mat-form-field>
+                            <input matInput placeholder="DNI" formControlName="dni" required>
+                            <mat-error *ngIf="forma.controls['dni'].invalid">{{getErrorDniMessage()}}</mat-error>
+                          </mat-form-field>
+                      </p>
+                      <p>
+                          <mat-icon>account_box</mat-icon>
+                          <mat-form-field>
+                            <input matInput placeholder="Ingre la direccion" formControlName="direccion" required>
+                            <mat-error *ngIf="forma.controls['direccion'].invalid">{{getErrorDireccionMessage()}}</mat-error>
+                          </mat-form-field>
+                      </p>
+
+                      <p>
+                          <mat-icon>account_box</mat-icon>
+                          <mat-form-field>
+                            <input matInput placeholder="Ingrese el telefono" formControlName="telefono" required>
+                            <mat-error *ngIf="forma.controls['telefono'].invalid">{{getErrorTelefonoMessage()}}</mat-error>
+                          </mat-form-field>
+                      </p>
+  
+                      <p>
+                        <mat-icon>face</mat-icon>
+                        <mat-form-field>
+                          <mat-select placeholder="Selecciona un usuario" formControlName="usuario" required disableRipple>
+                            <mat-option>--</mat-option>
+                            <mat-option *ngFor="let usuario of usuarios" [value]="usuario._id">{{usuario.nombre}}</mat-option>
+                            
+                          </mat-select>
+                          <mat-error *ngIf="forma.controls['usuario'].invalid">{{getErrorUsuarioMessage()}}</mat-error>
+  
+                        </mat-form-field>
+                      </p>
+                      <p>
+                          <mat-icon>account_box</mat-icon>
+                          <mat-form-field>
+                            <input matInput placeholder="Chirvinsu Colegio" formControlName="colegio" required>
+                            <mat-error *ngIf="forma.controls['colegio'].invalid">{{getErrorColegioMessage()}}</mat-error>
+                          </mat-form-field>
+                      </p>
+                      <div>
+                        <button mat-raised-button type="submit" color="primary" [disabled]="!forma.valid">Loguear</button>
+                      </div>
+                    </form>
+  
+                    <p>Form value {{forma.value | json}}</p>
+                    <p>Forma value {{forma.status | json}}</p>
+                    <p>Accoasdasunt status {{forma.errors | json}}</p>
+  
+                  </div>
+                </div>
+              </div>
+            
+          </div>
+       
+  
+      </div>
+    </div>
+  </div>
+
+<ngx-alerts></ngx-alerts>
